[project]
name = "wonderingpanda510"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wonderingpanda510gh", email = "wonderingpanda510@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.9.3",
    "twine>=6.1.0",
]

[tool.maturin]
module-name = "wonderingpanda510._core"
python-packages = ["wonderingpanda510"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
